tests/agl/rejections/parse/marker_duplicate.agl
def f(x: int, /, /, y: int) -> int = x
